# sudoku-solver

./: .gitignore  Cargo.toml  README.md  setup.py
src/: lib.rs  sudoku.rs
sudoku_solver/: __init__.py
tests/: test_ss.py  websudoku.py
