[package]
name = "sudoku-solver"
version = "0.2.0"
authors = ["Rrogntudju"]
edition = "2018"

[lib]
name = "sudoku_solver"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.14"
features = ["extension-module"]

[dependencies.ahash]
version = "0.7"

[profile.release]
lto = "fat" 
codegen-units = 1